# qtprotobuf

tests/test_qmakebuild/: CMakeLists.txt  qmakebuild.pro
